# home-credit

./: .pdm-python  README.md  columns_fill_nulls.py  pyproject.toml
data-pipelines/: README.md  pyproject.toml  setup.cfg  setup.py
home-credit/: LICENSE.txt  README.md  pyproject.toml
home-credit/src/home_credit/: __init__.py
notebooks/: depth_1_duckdb.ipynb  eda.ipynb  eda_applprev_1.ipynb  eda_debitcard_1.ipynb  eda_deposit_1.ipynb  eda_depth1.ipynb  eda_other_1.ipynb  eda_person_1.ipynb  full_data_check.ipynb  full_data_fill_nulls.ipynb  model_full_data.ipynb  preprocess_all_depths.ipynb  preprocess_depth_0_internl_data.ipynb  preprocess_depth_1_internal_data.ipynb  preprocess_depth_2.ipynb  preprocess_internal_data_depth_1.ipynb  simple_model_static.ipynb
