[project]
name = "home-credit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paolo Sofia", email = "paolosofia6@gmail.com"},
]
dependencies = [
    "kaleido>=0.2.1.post1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "duckdb>=0.10.0",
    "polars>=0.20.8",
    "pyarrow>=15.0.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "lightgbm==4.2.0",
    "mlflow>=2.10.2",
    "holidays>=0.42",
    "python-dateutil>=2.8.2",
    "kaleido>=0.2.1.post1",
]

[tool.dagster]
module_name = "data_pipelines"