[project]
name = "home-credit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paolo Sofia", email = "paolosofia6@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0" }

[project.scripts]
hello = "home_credit:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/home_credit"]
